# serialization_client

./: .gitignore  README.md  package.xml  setup.py
config/: config_mqtt_to_ros_bridge.yaml  config_ros_to_mqtt_bridge.yaml
serialization_client/: config.yaml  dynamic_deserializer.py  dynamic_json_serializer.py  package.xml  serializers.py  setup.cfg  setup.py
serialization_client/config/: config_mqtt_to_ros_bridge.yaml  config_ros_to_mqtt_bridge.yaml  config_ros_to_mqtt_bridge1.yaml  prius_sensor_kit.yaml
serialization_client/serialization_client/: deserializers.py  dynamic_deserializer.py  dynamic_json_serializer.py  serializers.py
